--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,5 @@ name = "pypi"
 pyperclip = "*"
 
 [dev-packages]
-"py2exe" = "==0.9.2.2"
-
-[requires]
-python_version = "3.4"
+"py2exe" = {version = "==0.9.2.2", platform_version = "== 'Windows'"}
+"py2app" = {version = "*", platform_version = "== 'Darwin'"}
