--- a/Pipfile
+++ b/Pipfile
@@ -7,5 +7,5 @@ name = "pypi"
 pyperclip = "*"
 
 [dev-packages]
-"py2exe" = {version = "==0.9.2.2", platform_version = "== 'Windows'"}
-"py2app" = {version = "*", platform_version = "== 'Darwin'"}
+"py2exe" = {version = "==0.9.2.2", platform_system = "== 'Windows'"}
+"py2app" = {version = "*", platform_system = "== 'Darwin'"}
