--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 pyperclip = "*"
 
 [dev-packages]
-py2exe = {version = "==0.9.2.2",platform_system = "== 'Windows'"}
-py2app = {version = "*",platform_system = "== 'Darwin'"}
-pyinstaller = "*"
+py2exe = { version = "*", platform_system = "== 'Windows'" }
+
+[requires]
+python_version = "3.10"
